# massive-api-client

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pr-tests.yml  publish.yml
src/massive_api_client/: __init__.py  config.py  exceptions.py
src/massive_api_client/rest/: __init__.py  aggs.py  base.py  indicators.py  reference.py
tests/rest/: test_base_close.py  test_base_get.py  test_base_pagination.py  test_base_retry_on_rate_limit.py
tests/rest/aggs/: test_get_grouped_daily_aggs.py  test_list_aggs.py
tests/rest/indicators/: test_get_ema.py  test_get_macd.py  test_get_rsi.py  test_get_sma.py
tests/rest/reference/: test_get_related_companies.py  test_get_ticker_details.py  test_get_ticker_events.py  test_get_ticker_types.py  test_list_ticker_news.py  test_list_tickers.py
