[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "massive-api-client"
version = "0.0.3"
description = "A Python async wrapper for massive.com API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Casey Vu" }
]
dependencies = [
  "httpx >= 0.28.1",
  "massive >= 2.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]